syntax = "proto2";

import "time.proto";

package otto;

enum PrimitiveAction {
  UNKNOWN = 0;
  // TODO(samuel-messing): rename "pump".
  WATER = 1;
  PICTURE = 2;
}

message Action {
  optional string plant_name = 1;
  optional PrimitiveAction action = 2;
  optional Tick tick = 3;
  // Optional, used for actions like WATER
  optional int32 duration_secs = 4;
}
